--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   mysql:
     image: mysql:8.0
@@ -13,7 +11,20 @@ services:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
-      - ./database/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./database:/docker-entrypoint-initdb.d
+    entrypoint: /docker-entrypoint-initdb.d/init-database.sh
+
+  api:
+    build: ./src
+    container_name: node_api_container
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - ./src:/usr/src/app
+    ports:
+      - "3000:3000"
+    depends_on:
+      - mysql
 
 volumes:
   db_data:
