--- a/src/package.json
+++ b/src/package.json
@@ -13,6 +13,11 @@
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
     "mysql2": "^3.11.0",
-    "sequelize": "^6.37.3"
+    "sequelize": "^6.37.3",
+    "src": "file:"
+  },
+  "devDependencies": {
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   }
 }
